--- a/Homework1.html
+++ b/Homework1.html
@@ -7,29 +7,29 @@
 </head>
 
 <body>
-<div class="Header">
+<div class="header">
     <h1>Чумаков Александр Николаевич</h1>
-    <img src="/Photo.jpg" title="MyPhoto">
+    <img src="photo.jpg" title="MyPhoto">
     <p>Инженер-технолог пищевого производства</p>
     </div>
-    <div class="Body1">
+    <div class="body1">
     <p>Хочу учить фронтенд, потому, что:</p>
     <ul>
     <li>всегда привлекала работа программиста</li>
     <li>большая возможность добиться успеха расчитывая только на свои знания</li>
     <li>возможность получать материальное вознаграждение, пропорционально своим знаниям и опыту</li>
-    </ul>    
+    </ul>
     </div>
-<div class="Body2">
+<div class="body2">
     <p>мой контактный телефон
     +380967104143</p>
     <br>
     <p>мой профиль в фейсбуке
         <a href="//www.facebook.com/alexandr.chumakov.98">facebook.com</a></p>
     </div>
-<div class="Footer">
+<div class="footer">
     <p>Мой девиз:</p>
-    <p>Вперед к осуществлению своей мечты!!!</p>    
+    <p>Вперед к осуществлению своей мечты!!!</p>
     </div>
-    
+
 </body>
